maltas sin imagen

--- a/frontend/public/productos/pilsner-malt-fuglsang/index.html
+++ b/frontend/public/productos/pilsner-malt-fuglsang/index.html
@@ -144,10 +144,10 @@
         <div class="splide" aria-labelledby="carousel-heading">
 
           <div class="splide__arrows">
-            <button class="splide__arrow splide__arrow--prev" style="background-color: #2a934d;">
+            <button class="splide__arrow splide__arrow--prev" style="background-color: #014688;">
               <img src="/images/arrow_white.svg"/>
             </button>
-            <button class="splide__arrow splide__arrow--next" style="background-color: #2a934d; border: 3px solid #2a934d;">
+            <button class="splide__arrow splide__arrow--next" style="background-color: #014688; border: 3px solid #014688;">
               <img src="/images/arrow_white.svg"/>
             </button>
           </div>
@@ -179,21 +179,21 @@
                 
             </ul>
           </div>
-          <div class="splide__bg" style="background-color: #d2e3b8;"></div>
+          <div class="splide__bg" style="background-color: #c1d4e8;"></div>
 
         </div>
 
       </div>
       <div class="col__right">
-        <span class="categoria_producto" style="color: #2a934d; background-color: #d2e3b8;">Marca: <a href="/productos/categorias/sekado">Sekado</a></span>
-        <h1>Premium Bohemian Pilsner Malt</h1>
+        <span class="categoria_producto" style="color: #014688; background-color: #c1d4e8;">Marca: <a href="/productos/categorias/sophus-fuglsang">Sophus Fuglsang</a></span>
+        <h1>Pilsner Malt</h1>
         <span class="sku">SKU: SEK-BPIL</span>
         <div class="malta__descripcion">
-          <h3 style="color: #2a934d;">Descripción</h3>
-          <p>La malta <strong>Premium Czech Bohemian Pilsner</strong> elaborada a partir de variedades seleccionadas de cebada de primavera de dos hileras. Base para el auténtico "Czech beer style", como Bohemian Pilsner.</p><p><strong>Tipo de cervezas:</strong>
-Es el tipo de malta más utilizada como base estándar para la producción de cervezas Lagers, Pilsners e IPAs.</p>
+          <h3 style="color: #014688;">Descripción</h3>
+          <p>La <strong>malta Pilsner</strong> es la malta base para todo tipo de cervezas, proporciona un perfil de sabor y color distintivos. Sabor y aroma sutil con toques de dulzura y nueces.</p><p><strong>Tipo de cervezas:</strong>
+Para todos los tipos, Pilsner, Pale Ale, Blonde Ale, IPA, Lager.</p>
         </div>
-        <a class="btn" style="background-color: #2a934d !important;">Ver características</a>
+        <a class="btn" style="background-color: #014688 !important;">Ver características</a>
       </div>
       
     </div>
@@ -210,22 +210,22 @@ Es el tipo de malta más utilizada como base estándar para la producción de ce
   <section id="section__body" class="pad__lr__10 pad__tb__5">
     <div class="column__2">
       <div class="col__left">
-        <h2 style="color: #2a934d;">Características</h2>
-        <ul><li>Aporta su color brillante</li><li>Cuerpo y sabor más completo</li><li>Maltosidad compleja</li></ul>
-        <h2 class="border__top" style="color: #2a934d;">Cantidad</h2>
+        <h2 style="color: #014688;">Características</h2>
+        <ul><li>Alto contenido de enzimas</li><li>Alto extracto</li><li>Color brillante y acabado limpio</li></ul>
+        <h2 class="border__top" style="color: #014688;">Cantidad</h2>
         <ul><li>Saco de 25 kg</li></ul>
       </div>
       <div class="col__right">
         <div class="about__product">
-          <h2 style="color: #2a934d;">Sobre el producto</h2>
+          <h2 style="color: #014688;">Sobre el producto</h2>
           <ul>
-            <li><span>Color EBC</span><span>3-4</span></li>
-            <li><span>Color °L</span><span>1.7 - 2.1</span></li>
-            <li><span>Porcentaje de humedad</span><span>Max. 5</span></li>
-            <li><span>Porcentaje de extracto DB</span><span>Min. 80.5</span></li>
-            <li><span>Porcentaje de proteínas</span><span>Max. 11.3</span></li>
-            <li><span>Fiabilidad</span><span>Min. 80</span></li>
-            <li><span>Beta-Glucanos mg/l</span><span>Max. 160</span></li>
+            <li><span>Color EBC</span><span>3 – 4.2</span></li>
+            <li><span>Color °L</span><span>1.7 – 2.1</span></li>
+            <li><span>Porcentaje de humedad</span><span>Max. 4.5</span></li>
+            <li><span>Porcentaje de extracto DB</span><span>Min. 80</span></li>
+            <li><span>Porcentaje de proteínas</span><span>Max. 11.5</span></li>
+            <li><span>Fiabilidad</span><span>Min. 75</span></li>
+            <li><span>Beta-Glucanos mg/l</span><span>Max. 220</span></li>
           </ul>
         </div>
       </div>
