--- a/frontend/public/nosotros/index.html
+++ b/frontend/public/nosotros/index.html
@@ -148,6 +148,7 @@
             <div class="col__right width__45">
                 <div class="grano1" data-speed="1.2"><img src="/images/home_grano1.png" /></div>
                 <div class="grano2" data-speed="1.2"><img src="/images/home_grano2.png" /></div>
+                <div class="grano3" data-speed="1.2"><img src="/images/home_grano2.png" /></div>
                 
                 <picture>
                     
@@ -166,7 +167,7 @@
     <section id="section__intro" class="pad__all__10 fadeInOut">
         <div class="column__2">
             <div class="col__left width__55">
-                <h3>Nuestra filosofía</h3>
+                <h3 class="identificador__left">Nuestra filosofía</h3>
                 <h2>“Con nuestras maltas contribuimos a la elaboración de cervezas sobresalientes en el mercado. Llevar calidad y productos únicos a las cervecerías mexicanas, es nuestro compromiso.”</h2>
             </div>
             <div class="col__right width__45">
@@ -177,26 +178,26 @@
 
     <section id="section__diferenciadores" class="pad__lr__10 pad__bottom__5">
         <div class="column__1 pad__top__5 pad__bottom__5">
-            <h3>Nuestros valores</h3>
+            <h3 class="identificador__left">Nuestros valores</h3>
         </div>
         <div class="column__1 listado__x4">
             <div class="diferenciador">
-                <img src="https://cdn.sanity.io/images/3znejphh/production/0800c3c8f9420d82cd354843ddc2c03adf3612ee-60x60.svg"/>
+                <img src="https://cdn.sanity.io/images/3znejphh/production/15b592b35d5dc6b67ceb40233690e298e16ffad8-60x60.svg"/>
                 <h2>Calidad</h2>
                 <p>Ofrecemos malta sometida a rigurosos controles de calidad, para asegurar que cada lote cumpla con altos estándares.</p>
             </div>
             <div class="diferenciador">
-                <img src="https://cdn.sanity.io/images/3znejphh/production/0800c3c8f9420d82cd354843ddc2c03adf3612ee-60x60.svg"/>
+                <img src="https://cdn.sanity.io/images/3znejphh/production/12681318f2bffb3feec1b766ca9a48953eca43c0-60x60.svg"/>
                 <h2>Rapidez</h2>
                 <p>Damos respuesta rápida en atención al cliente así como despacho de nuestro producto de almacén.</p>
             </div>
             <div class="diferenciador">
-                <img src="https://cdn.sanity.io/images/3znejphh/production/0800c3c8f9420d82cd354843ddc2c03adf3612ee-60x60.svg"/>
+                <img src="https://cdn.sanity.io/images/3znejphh/production/23c22444c8ee43fae6ad5d25979c689ef9955f57-60x60.svg"/>
                 <h2>Transparencia</h2>
                 <p>Ofrecemos total trazabilidad a nuestros clientes, proporcionándoles información completa sobre el origen y certificados de nuestra malta.</p>
             </div>
             <div class="diferenciador">
-                <img src="https://cdn.sanity.io/images/3znejphh/production/0800c3c8f9420d82cd354843ddc2c03adf3612ee-60x60.svg"/>
+                <img src="https://cdn.sanity.io/images/3znejphh/production/c70e83f4a024d546483887f4167220fd64d474b5-60x60.svg"/>
                 <h2>Sencillo</h2>
                 <p>Implementamos procesos amigables dentro de nuestra cadena logística facilitando el procesamiento de las ordenes de compra.</p>
             </div>
