--- a/frontend/public/productos/categorias/sekado/index.html
+++ b/frontend/public/productos/categorias/sekado/index.html
@@ -218,7 +218,7 @@
   </section>
 
 
-  <section id="section__productos__category" class="pad__tb__5 pad__lr__10" style=" background-color: #d2e3b8;  background-color: #d2e3b8;  background-color: #d2e3b8; ">
+  <section id="section__productos__category" class="anchor pad__tb__5 pad__lr__10" style=" background-color: #d2e3b8;  background-color: #d2e3b8;  background-color: #d2e3b8; ">
   
     <div class="column__1 max1400">
       <h3 style=" color: #2a934d;  color: #2a934d;  color: #2a934d; ">Catálogo de maltas Sekado:</h3>
