--- a/frontend/public/productos/categorias/sophus-fuglsang/index.html
+++ b/frontend/public/productos/categorias/sophus-fuglsang/index.html
@@ -218,7 +218,7 @@
   </section>
 
 
-  <section id="section__productos__category" class="pad__tb__5 pad__lr__10" style=" background-color: #c1d4e8;  background-color: #c1d4e8;  background-color: #c1d4e8;  background-color: #c1d4e8;  background-color: #c1d4e8;  background-color: #c1d4e8; ">
+  <section id="section__productos__category" class="anchor pad__tb__5 pad__lr__10" style=" background-color: #c1d4e8;  background-color: #c1d4e8;  background-color: #c1d4e8;  background-color: #c1d4e8;  background-color: #c1d4e8;  background-color: #c1d4e8; ">
   
     <div class="column__1 max1400">
       <h3 style=" color: #014688;  color: #014688;  color: #014688;  color: #014688;  color: #014688;  color: #014688; ">Catálogo de maltas Sophus Fuglsang:</h3>
