--- a/frontend/public/productos/index.html
+++ b/frontend/public/productos/index.html
@@ -141,7 +141,7 @@
       <div class="column__1 max1400">
         <h1>Catálogo de maltas</h1>
         <div><h2>Conoce el catálogo de maltas que tenemos <strong>para ti</strong></h2></div>
-        <a class="btn btn__hero">Ver catálogo</a>
+        <a class="btn btn__hero heroBtn">Ver catálogo</a>
       </div>
   </section>
   
@@ -167,7 +167,7 @@
   </section>
 
 
-  <section id="section__catalogo" class="pad__lr__10 pad__tb__5">
+  <section id="section__catalogo" class="anchor pad__lr__10 pad__tb__5">
       <div class="column__1 max1400 flex__align__c">
           <h3 class="identificador">Maltas por tipo</h3>
           <ul id="listado__maltas" role="list" class="listado__x3 width__100">
