--- a/frontend/public/articulos/categorias/recetas/index.html
+++ b/frontend/public/articulos/categorias/recetas/index.html
@@ -137,13 +137,13 @@
 <div data-barba="container" data-barba-namespace="categoria-articulo" data-css="articulos">
 
 
-  <section id="section__hero" class="pad__all__5">
+  <section id="section__hero" class="pad__all__10">
     <div class="column__1">
       <h1>Recetas</h1>
     </div>
   </section>
 
-  <section id="section__articulos" class="pad__all__5">
+  <section id="section__articulos" class="pad__lr__10 pad__tb__5">
     <div class="column__1">
       <ul role="list" class="listado__x3 width__100 hide__category">
         
