--- a/frontend/public/productos/pale-ale-malt/index.html
+++ b/frontend/public/productos/pale-ale-malt/index.html
@@ -480,7 +480,7 @@ Esta malta es versátil y adecuada para todos los tipos de cerveza incluyendo Pi
                 
                     <li>T: <a class="tel__text" href="tel:+5214421758021 ">4421758021 </a></li>
                     <li>C: <a href="mailto:ventas@setgomx.com">ventas@setgomx.com</a></li>
-                    <li><a href="https://maps.app.goo.gl/4YmwC4mdWnRX61QTA" target="_blank">Hacienda de Chinampas 118, Col. Las Teresas, Queretaro</a></li>
+                    <li><a href="" target="_blank">Queretaro</a></li>
                 
             </ul>
         </div>
