--- a/frontend/public/articulos/categorias/index.html
+++ b/frontend/public/articulos/categorias/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SETGO | </title>
-    <meta name="description" content="">
-    <meta name="keywords" content="">
+    <title>SETGO | Noticias sobre maltas y el mundo de la cerveza</title>
+    <meta name="description" content="Noticias, recetas, eventos y todo lo que necesitas saber sobre SETGO, nuestras maltas importadas y el mundo de la cerveza artesanal">
+    <meta name="keywords" content="Setgo, noticias, recetas, eventos, maltas importadas, maltas europeas, europa, cerveza, artesanal, cervecero">
     <meta name="author" content="SETGO">
     
     <meta property=”og:type” content="website" />
-    <meta property=”og:title” content="" />
-    <meta property=”og:description” content="" />
+    <meta property=”og:title” content="Noticias sobre maltas y el mundo de la cerveza" />
+    <meta property=”og:description” content="Noticias, recetas, eventos y todo lo que necesitas saber sobre SETGO, nuestras maltas importadas y el mundo de la cerveza artesanal" />
     <link rel="shortcut icon" href="/assets/favicon.ico" type="image/x-icon">
     <link rel="icon" href="/assets/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="/css/general/reset.css">
@@ -147,7 +147,7 @@
     <section id="section__productos" class="pad__all__5">
         <div class="column__1">
             <h2>Categorías</h2>
-            <ul role="list" class="listado__x3 width__100"><a href="/articulos/categorias/recetas">Recetas</a><a href="/articulos/categorias/noticias">Noticias</a>
+            <ul role="list" class="listado__x3 width__100"><a href="/articulos/categorias/noticias">Noticias</a>
             </ul>
         </div>
     </section>
