--- a/frontend/public/contacto/index.html
+++ b/frontend/public/contacto/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SETGO | </title>
-    <meta name="description" content="">
-    <meta name="keywords" content="">
+    <title>SETGO | En SETGO estamos para ayudarte</title>
+    <meta name="description" content="Estamos para brindarte la información que requieres para ayudarte a lograr el mejor resultado a través de nuestras maltas de calidad">
+    <meta name="keywords" content="Setgo, contactanos, maltas, comercializacion, industria, cerveza, cervecero, calidad, premium, queretaro, mexico, distribucion, contacto, sekado, sophus fuglsang">
     <meta name="author" content="SETGO">
     
     <meta property=”og:type” content="website" />
-    <meta property=”og:title” content="" />
-    <meta property=”og:description” content="" />
+    <meta property=”og:title” content="En SETGO estamos para ayudarte" />
+    <meta property=”og:description” content="Estamos para brindarte la información que requieres para ayudarte a lograr el mejor resultado a través de nuestras maltas de calidad" />
     <link rel="shortcut icon" href="/assets/favicon.ico" type="image/x-icon">
     <link rel="icon" href="/assets/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="/css/general/reset.css">
