--- a/frontend/public/nosotros/index.html
+++ b/frontend/public/nosotros/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SETGO | </title>
-    <meta name="description" content="">
-    <meta name="keywords" content="">
+    <title>SETGO | Comercializamos maltas de alta calidad en México</title>
+    <meta name="description" content="Somos SETGO, una empresa joven motivada por dotar a los cerveceros mexicanos de maltas premium para crear cervezas de gran calidad">
+    <meta name="keywords" content="Setgo, maltas, comercializacion, industria, cerveza, beer, malt, mexico, queretaro, premium, cerveceros, artesanal, calidad, rapidez, transparencia, procesamiento">
     <meta name="author" content="SETGO">
     
     <meta property=”og:type” content="website" />
-    <meta property=”og:title” content="" />
-    <meta property=”og:description” content="" />
+    <meta property=”og:title” content="Comercializamos maltas de alta calidad en México" />
+    <meta property=”og:description” content="Somos SETGO, una empresa joven motivada por dotar a los cerveceros mexicanos de maltas premium para crear cervezas de gran calidad" />
     <link rel="shortcut icon" href="/assets/favicon.ico" type="image/x-icon">
     <link rel="icon" href="/assets/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="/css/general/reset.css">
@@ -140,7 +140,7 @@
     <section id="section__hero" class="pad__lr__10">
         <div class="column__2">
             <div class="col__left flex__justify__c pad__right__5 width__55">            
-                <h1>Distribuidor de maltas únicas en México</h1>
+                <h1>Comercializamos maltas de alta calidad en México</h1>
                 <div><h2>Impulsamos la calidad cervecera a través de <strong>nuestras maltas</strong></h2></div>
                 <p>Somos SETGO, una empresa joven que llegó a la industria para marcar la diferencia, dotando a los cerveceros mexicanos de maltas premium para crear cervezas únicas.</p>
                 <a class="btn btn__hero">Conoce más de nosotros</a>
