--- a/frontend/public/productos/categorias/sekado/index.html
+++ b/frontend/public/productos/categorias/sekado/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SETGO | </title>
-    <meta name="description" content="">
-    <meta name="keywords" content="">
+    <title>SETGO | Sekado maltas de República Checa</title>
+    <meta name="description" content="Con sus maltas se elabora la auténtica cerveza Pilsner Checa. Maltas especializadas, e ingredientes como lúpulo Saaz y otras variedades de lúpulo checo.">
+    <meta name="keywords" content="Maltas, sekado, pilsner, checa, premium, bohemian, lupulo, saaz, checo, 1992, empresa, marca">
     <meta name="author" content="SETGO">
     
     <meta property=”og:type” content="website" />
-    <meta property=”og:title” content="" />
-    <meta property=”og:description” content="" />
+    <meta property=”og:title” content="Sekado maltas de República Checa" />
+    <meta property=”og:description” content="Con sus maltas se elabora la auténtica cerveza Pilsner Checa. Maltas especializadas, e ingredientes como lúpulo Saaz y otras variedades de lúpulo checo." />
     <link rel="shortcut icon" href="/assets/favicon.ico" type="image/x-icon">
     <link rel="icon" href="/assets/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="/css/general/reset.css">
