--- a/frontend/public/productos/categorias/sophus-fuglsang/index.html
+++ b/frontend/public/productos/categorias/sophus-fuglsang/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SETGO | </title>
-    <meta name="description" content="">
-    <meta name="keywords" content="">
+    <title>SETGO | Sophus Fuglsang maltas de Dinamarca</title>
+    <meta name="description" content="Se fundó en 1865 y es considerada una de las mejores maltas del mundo, gracias a las singulares condiciones climáticas de Dinamarca.">
+    <meta name="keywords" content="Maltas, sophus, fuglsang, dinamarca, 1865, malteado, ingredientes, sabor, aroma, calidad, empresa, marca, cerveza, cervecero">
     <meta name="author" content="SETGO">
     
     <meta property=”og:type” content="website" />
-    <meta property=”og:title” content="" />
-    <meta property=”og:description” content="" />
+    <meta property=”og:title” content="Sophus Fuglsang maltas de Dinamarca" />
+    <meta property=”og:description” content="Se fundó en 1865 y es considerada una de las mejores maltas del mundo, gracias a las singulares condiciones climáticas de Dinamarca." />
     <link rel="shortcut icon" href="/assets/favicon.ico" type="image/x-icon">
     <link rel="icon" href="/assets/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="/css/general/reset.css">
