--- a/frontend/public/productos/ebc100-malt/index.html
+++ b/frontend/public/productos/ebc100-malt/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SETGO | </title>
-    <meta name="description" content="">
-    <meta name="keywords" content="">
+    <title>SETGO | Malta EBC100 marca Sekado</title>
+    <meta name="description" content="La malta EBC 100 se puede usar como aditivo para agregar un color más oscuro y un sabor más completo; tiene un sabor ligeramente a nuez y galleta">
+    <meta name="keywords" content="EBC100, ebc, malta, cerveza, cervecero, nuez, galleta, oscuro, aditivo, proceso, artesanal, cebada, schwarzbier, ale, cervezas, oscura, oscuras, sekado">
     <meta name="author" content="SETGO">
     
     <meta property=”og:type” content="website" />
-    <meta property=”og:title” content="" />
-    <meta property=”og:description” content="" />
+    <meta property=”og:title” content="Malta EBC100 marca Sekado" />
+    <meta property=”og:description” content="La malta EBC 100 se puede usar como aditivo para agregar un color más oscuro y un sabor más completo; tiene un sabor ligeramente a nuez y galleta" />
     <link rel="shortcut icon" href="/assets/favicon.ico" type="image/x-icon">
     <link rel="icon" href="/assets/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="/css/general/reset.css">
