--- a/frontend/public/productos/munich-i-malt/index.html
+++ b/frontend/public/productos/munich-i-malt/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SETGO | </title>
-    <meta name="description" content="">
-    <meta name="keywords" content="">
+    <title>SETGO | Malta Munich I marca Sophus Fuglsang</title>
+    <meta name="description" content="La malta Munich I se puede usar como malta base o combinarse con otras maltas dependiendo del perfil de sabor deseado. Añade color y sabor más completo.">
+    <meta name="keywords" content="malta, munich, base, cerveza, tradicional, cervecero, schwarzbier, ale, oscuras, oscura, sophus, fuglsang">
     <meta name="author" content="SETGO">
     
     <meta property=”og:type” content="website" />
-    <meta property=”og:title” content="" />
-    <meta property=”og:description” content="" />
+    <meta property=”og:title” content="Malta Munich I marca Sophus Fuglsang" />
+    <meta property=”og:description” content="La malta Munich I se puede usar como malta base o combinarse con otras maltas dependiendo del perfil de sabor deseado. Añade color y sabor más completo." />
     <link rel="shortcut icon" href="/assets/favicon.ico" type="image/x-icon">
     <link rel="icon" href="/assets/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="/css/general/reset.css">
