--- a/frontend/public/productos/munich-malt-sekado/index.html
+++ b/frontend/public/productos/munich-malt-sekado/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SETGO | </title>
-    <meta name="description" content="">
-    <meta name="keywords" content="">
+    <title>SETGO | Malta Munich marca Sekado</title>
+    <meta name="description" content="La malta Munich se hornea a altas temperaturas para enfatizar la producción de melanoidinas, reforzará el color de la cerveza dando tonalidades ámbar.">
+    <meta name="keywords" content="malta, munich, sekado, vienna, melanoidinas, ambar, cervezas, oscuras, bock, oktoberfest, märzen, pilsner, bavarian, darks">
     <meta name="author" content="SETGO">
     
     <meta property=”og:type” content="website" />
-    <meta property=”og:title” content="" />
-    <meta property=”og:description” content="" />
+    <meta property=”og:title” content="Malta Munich marca Sekado" />
+    <meta property=”og:description” content="La malta Munich se hornea a altas temperaturas para enfatizar la producción de melanoidinas, reforzará el color de la cerveza dando tonalidades ámbar." />
     <link rel="shortcut icon" href="/assets/favicon.ico" type="image/x-icon">
     <link rel="icon" href="/assets/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="/css/general/reset.css">
