--- a/frontend/public/productos/pale-ale-malt/index.html
+++ b/frontend/public/productos/pale-ale-malt/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SETGO | </title>
-    <meta name="description" content="">
-    <meta name="keywords" content="">
+    <title>SETGO | Malta Pale Ale marca Sophus Fuglsang</title>
+    <meta name="description" content="La malta Pale Ale es la base para cervezas ligeramente oscuras. Un sabor sutil y limpio con toques de dulzura y frutos secos.">
+    <meta name="keywords" content="malta, pale, ale, paleale, cerveza, oscura, oscuras, dulce, frutos, versatil, pilsner, brown, cervecero, artesanal, sophus, fuglsang">
     <meta name="author" content="SETGO">
     
     <meta property=”og:type” content="website" />
-    <meta property=”og:title” content="" />
-    <meta property=”og:description” content="" />
+    <meta property=”og:title” content="Malta Pale Ale marca Sophus Fuglsang" />
+    <meta property=”og:description” content="La malta Pale Ale es la base para cervezas ligeramente oscuras. Un sabor sutil y limpio con toques de dulzura y frutos secos." />
     <link rel="shortcut icon" href="/assets/favicon.ico" type="image/x-icon">
     <link rel="icon" href="/assets/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="/css/general/reset.css">
