--- a/frontend/public/productos/pilsner-malt-fuglsang/index.html
+++ b/frontend/public/productos/pilsner-malt-fuglsang/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SETGO | </title>
-    <meta name="description" content="">
-    <meta name="keywords" content="">
+    <title>SETGO | Malta Pilsner marca Sophus Fuglsang</title>
+    <meta name="description" content="La malta Pilsner es la base para todo tipo de cervezas, brinda un perfil de sabor y color distintivos. Sabor y aroma sutil con toques de dulzura y nueces.">
+    <meta name="keywords" content="malta, pilsner, cerveza, cervezas, dulce, dulzura, nuez, nueces, pale, ale, paleale, blonde, blondeale, ipa, ipas, lager, lagers, artesanal, sophus, fuglsang">
     <meta name="author" content="SETGO">
     
     <meta property=”og:type” content="website" />
-    <meta property=”og:title” content="" />
-    <meta property=”og:description” content="" />
+    <meta property=”og:title” content="Malta Pilsner marca Sophus Fuglsang" />
+    <meta property=”og:description” content="La malta Pilsner es la base para todo tipo de cervezas, brinda un perfil de sabor y color distintivos. Sabor y aroma sutil con toques de dulzura y nueces." />
     <link rel="shortcut icon" href="/assets/favicon.ico" type="image/x-icon">
     <link rel="icon" href="/assets/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="/css/general/reset.css">
