--- a/frontend/public/productos/premium-bohemian-pilsner-malt/index.html
+++ b/frontend/public/productos/premium-bohemian-pilsner-malt/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SETGO | </title>
-    <meta name="description" content="">
-    <meta name="keywords" content="">
+    <title>SETGO | Malta Premium Bohemian Pilsner marca Sekado</title>
+    <meta name="description" content="La malta Premium Czech Bohemian Pilsner es elaborada a partir de variedades seleccionadas de cebada de primavera de dos hileras. Cerveza estilo Checa.">
+    <meta name="keywords" content="malta, premium, czech, republica, checa, bohemian, pilsner, cebada, beer, cervezas, cervecero, artesanal, lager, lagers, pilsners, ipa, ipas">
     <meta name="author" content="SETGO">
     
     <meta property=”og:type” content="website" />
-    <meta property=”og:title” content="" />
-    <meta property=”og:description” content="" />
+    <meta property=”og:title” content="Malta Premium Bohemian Pilsner marca Sekado" />
+    <meta property=”og:description” content="La malta Premium Czech Bohemian Pilsner es elaborada a partir de variedades seleccionadas de cebada de primavera de dos hileras. Cerveza estilo Checa." />
     <link rel="shortcut icon" href="/assets/favicon.ico" type="image/x-icon">
     <link rel="icon" href="/assets/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="/css/general/reset.css">
