--- a/frontend/public/productos/vienna-malt-fulgsang/index.html
+++ b/frontend/public/productos/vienna-malt-fulgsang/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SETGO | </title>
-    <meta name="description" content="">
-    <meta name="keywords" content="">
+    <title>SETGO | Malta Vienna marca Sophus Fuglsang</title>
+    <meta name="description" content="La malta Vienna es la base para cervezas ligeramente oscuras. Proporciona un perfil de sabor y color distintivo.">
+    <meta name="keywords" content="malta, vienna, cerveza, cervezas, oscura, oscuras, lager, lagers, oktoberfest, irish, red, ale, redale, tripple, tripples, dunkel, sophus, fuglsang">
     <meta name="author" content="SETGO">
     
     <meta property=”og:type” content="website" />
-    <meta property=”og:title” content="" />
-    <meta property=”og:description” content="" />
+    <meta property=”og:title” content="Malta Vienna marca Sophus Fuglsang" />
+    <meta property=”og:description” content="La malta Vienna es la base para cervezas ligeramente oscuras. Proporciona un perfil de sabor y color distintivo." />
     <link rel="shortcut icon" href="/assets/favicon.ico" type="image/x-icon">
     <link rel="icon" href="/assets/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="/css/general/reset.css">
