--- a/frontend/public/productos/vienna-malt-sekado/index.html
+++ b/frontend/public/productos/vienna-malt-sekado/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SETGO | </title>
-    <meta name="description" content="">
-    <meta name="keywords" content="">
+    <title>SETGO | Malta Vienna marca Sekado</title>
+    <meta name="description" content="La malta Vienna profundiza el color claro y brillante de la cerveza. Se fabrica con un proceso de malteado especial con cebada cervecera seleccionada.">
+    <meta name="keywords" content="Malta, vienna, sekado, cebada, cerveza, artesanal, fabricacion, metodo, proceso, cervecera, seleccionada, especial, malteado, golden, brown, lager, german, beer, beers">
     <meta name="author" content="SETGO">
     
     <meta property=”og:type” content="website" />
-    <meta property=”og:title” content="" />
-    <meta property=”og:description” content="" />
+    <meta property=”og:title” content="Malta Vienna marca Sekado" />
+    <meta property=”og:description” content="La malta Vienna profundiza el color claro y brillante de la cerveza. Se fabrica con un proceso de malteado especial con cebada cervecera seleccionada." />
     <link rel="shortcut icon" href="/assets/favicon.ico" type="image/x-icon">
     <link rel="icon" href="/assets/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="/css/general/reset.css">
