--- a/frontend/public/productos/index.html
+++ b/frontend/public/productos/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SETGO | </title>
-    <meta name="description" content="">
-    <meta name="keywords" content="">
+    <title>SETGO | Catálogo de maltas</title>
+    <meta name="description" content="Te ofrecemos maltas premium, marca Sekado y Sophus Fuglsang de República Checa y Dinamarca respectivamente. La mejor calidad para maestros cerveceros">
+    <meta name="keywords" content="Maltas, catálogo maltas, sekado, sophus, fuglsang, republica checa, dinamarca, productos, cerveza artesanal, cerveza, cervecero, premium,">
     <meta name="author" content="SETGO">
     
     <meta property=”og:type” content="website" />
-    <meta property=”og:title” content="" />
-    <meta property=”og:description” content="" />
+    <meta property=”og:title” content="Catálogo de maltas" />
+    <meta property=”og:description” content="Te ofrecemos maltas premium, marca Sekado y Sophus Fuglsang de República Checa y Dinamarca respectivamente. La mejor calidad para maestros cerveceros" />
     <link rel="shortcut icon" href="/assets/favicon.ico" type="image/x-icon">
     <link rel="icon" href="/assets/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="/css/general/reset.css">
