--- a/frontend/public/productos/munich-ii-malt/index.html
+++ b/frontend/public/productos/munich-ii-malt/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SETGO | </title>
-    <meta name="description" content="">
-    <meta name="keywords" content="">
+    <title>SETGO | Malta Munich II marca Sophus Fuglsang</title>
+    <meta name="description" content="La malta Munich II puede ser utilizada tanto como malta base y como un aditivo para añadir un color oscuro y un sabor más completo.">
+    <meta name="keywords" content="malta, munich, ii, 2, base, aditivo, oscuro, cerveza, oscura, cebada, sophus, fuglsang, schwarzbier, ale">
     <meta name="author" content="SETGO">
     
     <meta property=”og:type” content="website" />
-    <meta property=”og:title” content="" />
-    <meta property=”og:description” content="" />
+    <meta property=”og:title” content="Malta Munich II marca Sophus Fuglsang" />
+    <meta property=”og:description” content="La malta Munich II puede ser utilizada tanto como malta base y como un aditivo para añadir un color oscuro y un sabor más completo." />
     <link rel="shortcut icon" href="/assets/favicon.ico" type="image/x-icon">
     <link rel="icon" href="/assets/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="/css/general/reset.css">
